# timekeeper

./: .eslintrc.json  AGENTS.md  README.md  mise.toml  package-lock.json  package.json  time-keeper.drawio  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  Layout.tsx  dayjs.ts  index.tsx  storage.ts  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Box.tsx  Button.tsx  Dialog.tsx  Icon.tsx  Select.tsx  index.tsx
src/pages/Booking/: index.tsx
src/pages/Settings/: index.tsx
src/utils/: index.ts
